# rekvizitai_lt_parser

./: .gitignore  Cargo.toml  README.md  README.org  build.sh  env.sh  manifest.scm
src/: lib.rs  main.rs  scraper.rs
src/entity/: mod.rs
src/scraper/: mod.rs
