[package]
name = "rekvizitai_lt_parser"
version = "0.3.0"
authors = ["hitwright"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
actix-web = "*"
clap = { version = "=4.2.0", features = ["derive"] }
env_logger = "*"
file_diff = "*"
futures = "*"
html5ever = "*"
image = "*"
json = "*"
leptess = "*"
log = "*"
regex = "*"
reqwest = "*"
serde = { features = ["derive"], version = "*" }
soup = "*"
tempfile = "*"
