[package]
name = "rekvizitai_lt_parser"
version = "0.3.0"
authors = ["hitwright"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
actix-web = { features = ["openssl"], version = "*" }
clap = { features = ["derive"], version = "=4.2" }
env_logger = "*"
image = "*"
leptess = "*"
log = "*"
openssl = "*"
regex = "*"
reqwest = "0.11.0"
scraper = "*"
serde = { features = ["derive"], version = "*" }
serde_json = "*"
tempfile = "*"
thiserror = "1.0"
tokio = { features = ["full"], version = "*" }
url = "*"
